--- a/dashboard/frontend/terminal.html
+++ b/dashboard/frontend/terminal.html
@@ -44,7 +44,7 @@
         var socket;
         var container_id = "{{.Container}}";
         var pod_id = "{{.Pod.ObjectMeta.Name}}";
-        var url = "http://" + window.location.host + "/terminal/ws?container=" + container_id + "&pod=" + pod_id;
+        var url = "http://" + window.location.host + "/bdkit/terminal/ws?container=" + container_id + "&pod=" + pod_id;
 
         socket = new SockJS(url);
         term.open(document.getElementById('terminal-container'));
